[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fff-forward.regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/title.png" type="Texture" id=3]
[ext_resource path="res://assets/buttonpressed.png" type="Texture" id=4]
[ext_resource path="res://assets/button.png" type="Texture" id=5]
[ext_resource path="res://assets/buttonhover.png" type="Texture" id=6]
[ext_resource path="res://assets/buttondisabled.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0.364706, 0.0156863, 0.466667, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "MenuAnim"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Title:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 100, 30 ), Vector2( 100, 50 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureButton:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 200, 280 ), Vector2( 200, 260 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureButton3:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 200, 360 ), Vector2( 200, 340 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TextureButton2:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 200, 440 ), Vector2( 200, 420 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TextureButton:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TextureButton3:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TextureButton2:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Label:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Label3:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.7, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Label4:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Title:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="StartMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
margin_left = -9.5
margin_top = -8.0
margin_right = 607.5
margin_bottom = 617.0
color = Color( 0.2, 0.054902, 0.419608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="."]
margin_left = 100.0
margin_top = 50.0
margin_right = 500.0
margin_bottom = 250.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 200.0
margin_top = 260.0
margin_right = 264.0
margin_bottom = 324.0
rect_scale = Vector2( 3, 1 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="TextureButton" parent="."]
margin_left = 200.0
margin_top = 340.0
margin_right = 264.0
margin_bottom = 404.0
rect_scale = Vector2( 3, 1 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 200.0
margin_top = 420.0
margin_right = 264.0
margin_bottom = 484.0
rect_scale = Vector2( 3, 1 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 200.0
margin_top = 264.0
margin_right = 390.0
margin_bottom = 328.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "PLAY"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 200.0
margin_top = 344.0
margin_right = 390.0
margin_bottom = 408.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "ENDLESS"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 200.0
margin_top = 424.0
margin_right = 390.0
margin_bottom = 488.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "CREDITS"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuAnim" type="AnimationPlayer" parent="."]
anims/MenuAnim = SubResource( 2 )

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="animation_finished" from="MenuAnim" to="." method="_on_MenuAnim_animation_finished"]
